# mlops

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  digit_prediction.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
infra/aws-ecs/: main.tf  outputs.tf  variables.tf
monitoring/: prometheus.yml
scripts/: train_model.py
src/digit_api/: __init__.py  config.py  image_processing.py  main.py  metrics.py  model.py  schemas.py
tests/: conftest.py  test_api.py  test_image_processing.py
