[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nxp-digit-inference"
version = "0.1.0"
description = "Productionized handwritten digit inference API for the NXP MLOps assignment."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["digit_prediction.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
